src/trace/snapshots/asupersync__trace__event__tests__browser_trace_log_fields_obligation_abort_scrubbed.snap
---
source: src/trace/event.rs
expression: scrub_browser_trace_fields(&fields)
---
{
  "abort_reason": "error",
  "capture_host_time_ns": "[capture_host_time_ns]",
  "capture_host_turn_seq": "52",
  "capture_replay_key": "[capture_replay_key]",
  "capture_source": "runtime",
  "capture_source_seq": "52",
  "duration_ns": "5000",
  "event_kind": "obligation_abort",
  "kind": "lease",
  "obligation": "[obligation]",
  "region": "[region]",
  "schema_version": "browser-trace-schema-v1",
  "seq": "[seq]",
  "sequence_group": "[sequence_group]",
  "state": "aborted",
  "task": "[task]",
  "time_ns": "[time_ns]",
  "trace_id": "[trace_id]",
  "validation_failure_category": "none",
  "validation_status": "valid"
}
