src/trace/snapshots/asupersync__trace__event__tests__otel_span_golden_tests.snap
---
source: src/trace/event.rs
expression: span_events
---
[
  {
    "version": 1,
    "seq": 1,
    "time": 1000,
    "logical_time": null,
    "kind": "spawn",
    "data": {
      "Task": {
        "task": {
          "kind": "TaskId",
          "index": 10,
          "generation": 1
        },
        "region": {
          "kind": "RegionId",
          "index": 5,
          "generation": 1
        }
      }
    }
  },
  {
    "version": 1,
    "seq": 2,
    "time": 1100,
    "logical_time": null,
    "kind": "schedule",
    "data": {
      "Task": {
        "task": {
          "kind": "TaskId",
          "index": 10,
          "generation": 1
        },
        "region": {
          "kind": "RegionId",
          "index": 5,
          "generation": 1
        }
      }
    }
  },
  {
    "version": 1,
    "seq": 3,
    "time": 1200,
    "logical_time": null,
    "kind": "poll",
    "data": {
      "Task": {
        "task": {
          "kind": "TaskId",
          "index": 10,
          "generation": 1
        },
        "region": {
          "kind": "RegionId",
          "index": 5,
          "generation": 1
        }
      }
    }
  },
  {
    "version": 1,
    "seq": 4,
    "time": 1250,
    "logical_time": null,
    "kind": "user_trace",
    "data": {
      "Message": "otel-span-processing"
    }
  },
  {
    "version": 1,
    "seq": 5,
    "time": 1300,
    "logical_time": null,
    "kind": "complete",
    "data": {
      "Task": {
        "task": {
          "kind": "TaskId",
          "index": 10,
          "generation": 1
        },
        "region": {
          "kind": "RegionId",
          "index": 5,
          "generation": 1
        }
      }
    }
  }
]
