src/trace/snapshots/asupersync__trace__event__tests__trace_event_canonical_ndjson_serialization.snap
---
source: src/trace/event.rs
assertion_line: 4246
expression: ndjson_output
---
{"version":1,"seq":1,"time":5000,"logical_time":null,"kind":"spawn","data":{"Task":{"task":{"kind":"TaskId","index":20,"generation":1},"region":{"kind":"RegionId","index":10,"generation":1}}}}
{"version":1,"seq":2,"time":5100,"logical_time":null,"kind":"schedule","data":{"Task":{"task":{"kind":"TaskId","index":20,"generation":1},"region":{"kind":"RegionId","index":10,"generation":1}}}}
{"version":1,"seq":3,"time":5200,"logical_time":null,"kind":"poll","data":{"Task":{"task":{"kind":"TaskId","index":20,"generation":1},"region":{"kind":"RegionId","index":10,"generation":1}}}}
{"version":1,"seq":4,"time":5250,"logical_time":null,"kind":"user_trace","data":{"Message":"ndjson-stream-marker"}}
{"version":1,"seq":5,"time":5300,"logical_time":null,"kind":"complete","data":{"Task":{"task":{"kind":"TaskId","index":20,"generation":1},"region":{"kind":"RegionId","index":10,"generation":1}}}}
